# glfw-and-glad-libs-starter-pack

./: CMakeCache.txt  CMakeLists.txt  Engine  Makefile  cmake_install.cmake  helper.txt
libs/GLAD/include/: glad.h
libs/GLAD/src/: glad.c
src/: main.cpp
src/graphics/: EngineLauncher.cpp  EngineLauncher.hpp  Shader.hpp
src/graphics/figures/: rectangle.hpp
src/graphics/figures/3d/: cube.hpp
src/shaders/: vShader.vs
